apps/envoy-gateway/configs/gateways.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  labels:
    dns-instance: bind
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: envoy-internal
  listeners:
    - name: wildcard
      hostname: "*.${SECRET_DOMAIN}"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-tls"
      allowedRoutes:
        namespaces:
          from: All
    - name: auth
      hostname: "auth.${SECRET_DOMAIN}"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: "auth-${SECRET_DOMAIN/./-}-tls"
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  labels:
    dns-instance: cloudflare
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: envoy-external
  listeners:
    - name: wildcard
      hostname: "*.${SECRET_DOMAIN}"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-tls"
      allowedRoutes:
        namespaces:
          from: All
    - name: auth
      hostname: "auth.${SECRET_DOMAIN}"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: "auth-${SECRET_DOMAIN/./-}-tls"
      allowedRoutes:
        namespaces:
          from: Same
