apps/envoy-gateway/configs/policies.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: authelia-internal
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      sectionName: wildcard
  extAuth:
    headersToExtAuth:
      - accept
      - cookie
      - proxy-authorization
      - x-forwarded-for
      - x-forwarded-proto
    http:
      backendRefs:
        - name: authelia
          port: 80
      path: /api/authz/ext-authz/
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Email
        - Remote-Name
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: authelia-external
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external
      sectionName: wildcard
  extAuth:
    headersToExtAuth:
      - accept
      - cookie
      - proxy-authorization
      - x-forwarded-for
      - x-forwarded-proto
    http:
      backendRefs:
        - name: authelia
          port: 80
      path: /api/authz/ext-authz/
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Email
        - Remote-Name
